= Pendiente
 * Agregar los mensajes que faltan

= v00008c =
@ 06/06/2018
* Se modificó condicionales del envío de los push notification.

= v00008b =
@ 06/06/2018
* Se agregó bitácora para los envíos de push notification.

= v00008a =
@ 31/05/2018 - RSOBRERO
 * Notificaciones asociadas a los MAIL y se agrega clase
 	snapCar.notif.continuo.Eventos

= v00007h =
@ 09/05/2018 - AGALAZ
 * Se modifica EndosoFactura para cuando s un endoso de prorroga de
   un periodo previo. El problema estaba en los acumuladores.

= v00007g =
@ 08/05/2018 - AGALAZ
 * Se agrega clase CallPushService
@ 02/05/2018 - AGALAZ
 * Se corrige error de UNSIGNED en EndosoFactura

= v00007f =
@ 26/04/2018 - AGALAZ
 * Se cambió tMovim cod_endoso,codendoso -> endoso,cod_endoso

= v00007e =
@ 22/03/2018 - AGALAZ
 * No sincro se llama a Control Fecha con Periodo=0
@ 19/03/2018 - AGALAZ
 * Se cambia condición WHERE envío de Certificados 

= v00007d =
@ 08/03/2018 - AGALAZ
 * Se agrega cFecFinLarga
 * Se agrega template prorroga_noSync

= v00007c =
@ 07/03/2018 - AGALAZ
 * Cambios en la forma de cálculo del impuesto que ajusta
 * Se modifica en el Template SVG los días uso, no uso, punta.

= v00007b =
@ 06/03/2018 - AGALAZ
 * Cambios en la forma de cálculo

= v00007a =
@ 02/03/2018 - AGALAZ
 * Se agregan procesos que corren en forma continua:
   - Bienvenida
   - Prorroga
   - Certificado

= v00006b =
@ 22/02/2018 - AGALAZ
 * No se factura Pólizas TEST
@ 19/02/2018 - AGALAZ
 * Se agrega 'Días sin Mendición' al frente del mail de Administración
   Factura.

= v00006a =
@ 09/02/2018 - AGALAZ
 * En factura Parcial faltaba filtrar que los vehículos fueran Activos.
@ 08/02/2018 - AGALAZ
 * Se agrega nDiasCierreAnt a tabla wMemoryCierreTransf, para el procedure
   prControlCierreTransferenciaInicioDef, con esto se mide la cantidad de
   días al cierre inicial
 * Se ajusta la cantidad de días vencidos del periodo a 13 en FacturaParcial

= v00006 =
@ 02/02/2018 - AGALAZ
 * Se agrega BCC dos cuentas

= v00005c =